Mon Mar  9 13:39:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/*:
          Moved all TAO and CIAO files to TAO_ROOT/etc and CIAO_ROOT/etc

        * bin/generate_doxygen.pl:
          Updated for doxygen file change

Mon Mar  9 07:22:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_qt3reactor.mpc:
          Explicitly list moc file to resolve compile warning on fc6

Mon Mar  9 07:08:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_footprint_chart.sh:
          Changed location of footer

        * bin/MakeProjectCreator/config/global.features:
          lzo1 is disabled by default

Fri Mar  6 20:28:50 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/Run_Test.pm:

          Added add_lib_path support for Mac OS X (DYLD_LIBRARY_PATH).

Fri Mar  6 09:07:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/Stats/footprint.shtml:
          Corrected links

Thu Mar  5 20:18:42 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_linux_common.GNU:
          Improved support for systems that lack 'lsb_release' command
          and systems which getconf doesn't support 'GNU_LIBPTHREAD_VERSION'
          variable.

Thu Mar  5 19:22:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ace_qt3reactor.mpc:
        * ace/ace_qt4reactor.mpc:
          Moved moc step to seperate project to get the correct build order
          with incredibuild

        * ace/Select_Reactor_T.h:
        * ace/Sig_Handler.h:
        * ace/WFMO_Reactor.h:
          Doxygen changes

Wed Mar  4 20:01:11 UTC 2009  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_g++_common.GNU:
          Add -ftemplate-depth-23 to CCFLAGS when compiling with GCC 2.x.

Wed Mar  4 10:04:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_footprint_chart.sh: