@@ -1,3 +1,15 @@
+Fri Mar 13 08:16:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/diff-builds-and-group-fixed-tests-only.sh:
+          Check also the lst files in the TAO_ROOT/bin and CIAO_ROOT/bin
+          directory.
+
+        * ace/MEM_Connector.h
+        * ace/SOCK_Connector.h
+        * ace/SOCK_SEQPACK_Connector.h
+        * ace/SSL/SSL_SOCK_Connector.h
+          Fixed typo in comment
+
 Mon Mar  9 13:39:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * etc/*:
